mobile nav and other wrap issue

--- a/web/themes/custom/nkh/src/sass/structures/_entity.scss
+++ b/web/themes/custom/nkh/src/sass/structures/_entity.scss
@@ -1,7 +1,7 @@
 .entity-cta-text,
 .view-cta-references {
   padding: 2rem;
-  width: calc(100% + 40px);
+  width: calc(100% + 20px);
   margin-left: -20px;
   margin-right: -20px;
   overflow: visible;
